styles for firefox: input color, scrollbar fixed

--- a/src/components/buttons/data-entry-button/DataEntryButton.module.scss
+++ b/src/components/buttons/data-entry-button/DataEntryButton.module.scss
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: flex-start;
   border-radius: $borderRadius1;
   background-color: $colorGray75;
   color: $colorWhite;
